src/language/tests/success/imports/file.prez
int func() {
  return 2;
}

int func(int n) {
  return n + 1;
}


class Rectangle {
  public long length;
  public long width;

  public Rectangle(long len, long wid) {
    this.length = len;
    this.width = wid;
  }

  public long area() {
    return this.length * this.width;
  }
}
